Modify CM tree for MoKee

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-Copyright 2012 - The CyanogenMod Project
+Copyright 2014 - MoKee Open Source
 
 Device configuration for Samsung Galaxy S3 (T-Mobile model).
 
-WORK IN PROGRESS. WILL EAT YOUR CAT.
+
